--- a/web/themes/ipu/templates/field/field--node--field-location--ipu-event.html.twig
+++ b/web/themes/ipu/templates/field/field--node--field-location--ipu-event.html.twig
@@ -18,31 +18,46 @@
 ]
 %}
 
-{% if label_hidden %}
-  {% if multiple %}
-    <div{{ attributes.addClass(classes) }}>
-      {% for item in items %}
-        <div{{ item.attributes.addClass('field__item') }}>{{ item.content }}</div>
-      {% endfor %}
-    </div>
-  {% else %}
-    {% for item in items %}
-      <div{{ attributes.addClass(classes) }}>{{ item.content }}</div>
-    {% endfor %}
-  {% endif %}
-{% else %}
-  <div{{ attributes.addClass(classes) }}>
-    <div{{ title_attributes.addClass(title_classes) }}>
-      {{ label }}{% if label_display == 'inline' %}<span class="field__label__suffix mr-1">:</span>{% endif %}
-    </div>
+{% autoescape false %}
+
+  {% if label_hidden %}
     {% if multiple %}
-    <div class="field__items">
-      {% endif %}
+      <div{{ attributes.addClass(classes) }}>
+        {% for item in items %}
+          <div{{ item.attributes.addClass('field__item') }}>
+            {% filter replace({",,": ","}) %}
+              {{ item.content }}
+            {% endfilter %}
+          </div>
+        {% endfor %}
+      </div>
+    {% else %}
       {% for item in items %}
-        <div{{ item.attributes.addClass('field__item') }}>{{ item.content }}</div>
+        <div{{ attributes.addClass(classes) }}>
+          {% filter replace({",,": ","}) %}
+            {{ item.content }}
+          {% endfilter %}
+        </div>
       {% endfor %}
-      {% if multiple %}
-    </div>
     {% endif %}
-  </div>
-{% endif %}
+  {% else %}
+    <div{{ attributes.addClass(classes) }}>
+      <div{{ title_attributes.addClass(title_classes) }}>
+        {{ label }}{% if label_display == 'inline' %}<span class="field__label__suffix mr-1">:</span>{% endif %}
+      </div>
+      {% if multiple %}
+      <div class="field__items">
+        {% endif %}
+        {% for item in items %}
+          <div{{ item.attributes.addClass('field__item') }}>
+            {% filter replace({",,": ","}) %}
+              {{ item.content }}
+            {% endfilter %}
+          </div>
+        {% endfor %}
+        {% if multiple %}
+      </div>
+      {% endif %}
+    </div>
+  {% endif %}
+{% endautoescape %}
