Updates to country taxonomy to add human rights cases documents. The ipu_map module is updated to show these when the number of cases if greater than zero.

--- a/web/modules/custom/ipu_map/templates/ipu-map-country.html.twig
+++ b/web/modules/custom/ipu_map/templates/ipu-map-country.html.twig
@@ -36,7 +36,7 @@
                 {{ content.events }}
             {% endif %}
             {% if content.hr_documents|length %}
-              <h2>{{ 'Human Rights Cases'|t }}</h2>
+              <h2>{{ 'Recent human rights cases'|t }}</h2>
               {{ content.hr_documents }}
             {% endif %}
         </div>
