--- a/web/modules/custom/ipu_map/templates/ipu-map-parline-data.html.twig
+++ b/web/modules/custom/ipu_map/templates/ipu-map-parline-data.html.twig
@@ -73,7 +73,7 @@
                             <div><div class="stats-circle">{{ human_rights_cases }}</div></div>
                             <div class="stats-content">{{ 'cases currently treated by the Committee on the Human Rights of MPs'|t }}</div>
                         </div>
-                        <div class="mt-auto"><a class="stats-more-link" href="{{ ipu_map_hr_link }}">{{ 'Report an MP in danger'|t }}</a></div>
+                        <div class="mt-auto"><a class="stats-more-link" href="{{ ipu_map_hr_link }}">{{ ipu_map_hr_text }}</a></div>
                     </div>
                 </div>
             </div>
