All theme changes to facilitate Innovation tracker issues

--- a/web/themes/ipu/src/sass/ipu.style.scss
+++ b/web/themes/ipu/src/sass/ipu.style.scss
@@ -87,6 +87,9 @@ $spacers: map-merge(
 @import "block/block2";
 @import "navigation/nav";
 @import "content/node.page";
+@import "content/node.innovation_tracker_issue";
+@import "content/node.innovation_tracker_story";
+@import "content/node.hub_update";
 @import "content/node.article";
 @import "base/forms";
 @import "sitesearch";
