Styling for Innovation tracker

--- a/web/themes/ipu/src/sass/content/_node.hub_update.scss
+++ b/web/themes/ipu/src/sass/content/_node.hub_update.scss
@@ -1,3 +1,8 @@
+.taxonomy-list-innovation-hub {
+  h1 {
+    border-bottom-color: color('ipu-orange');
+  }
+}
 .node--type-hub-update.node--view-mode-highlight {
   margin: 0 10px 15px 10px;
 
