--- a/web/themes/ipu/src/sass/content/_node.innovation_tracker_issue.scss
+++ b/web/themes/ipu/src/sass/content/_node.innovation_tracker_issue.scss
@@ -1,4 +1,7 @@
 .node-innovation_tracker_issue {
+  .block--ipu-page-title h1 {
+    display:none;
+  }
   h1 {
     border-bottom-color: color('ipu-orange');
   }
