--- a/web/themes/ipu/src/sass/content/_node.innovation_tracker_story.scss
+++ b/web/themes/ipu/src/sass/content/_node.innovation_tracker_story.scss
@@ -1,3 +1,8 @@
+.node-innovation_tracker_story {
+  h1 {
+    border-bottom-color: color('ipu-orange');
+  }
+}
 .node--type-innovation-tracker-story.node--view-mode-highlight {
   .bs-region--main {
     padding: 0;
