Add host country to Hub, styling of issue list (highlight view mode).

--- a/web/themes/ipu/src/sass/_ipu-variables.scss
+++ b/web/themes/ipu/src/sass/_ipu-variables.scss
@@ -62,6 +62,7 @@ $ipu-dark-grey: #333333;
 $ipu-grey: #747678;
 $ipu-light-grey: #cccccc;
 $ipu-very-light-grey: #eeeeee;
+$ipu-extra-light-grey: #fafafa;
 $ipu-white: #ffffff;
 $ipu-black: $gray-900;
 
