--- a/web/modules/custom/ipu_map/templates/ipu-map-country-stats.html.twig
+++ b/web/modules/custom/ipu_map/templates/ipu-map-country-stats.html.twig
@@ -62,9 +62,14 @@
             <a class="more-data-parline" href="{{ url }}"><span class="fas fa-chart-pie"></span>{{ 'More data from Parline'|t }}</a>
         </li>
     </ul>
-    {% if data_provenance is not same as(null) %}
-    <div class="data-provenance">
-        {{ data_provenance }}
+    {% if hub_link is not same as(null) %}
+    <div class="hub-link">
+        {{ hub_link }}
     </div>
     {% endif %}
+  {% if data_provenance is not same as(null) %}
+    <div class="data-provenance">
+      {{ data_provenance }}
+    </div>
+  {% endif %}
 </div>
