Tweak to styling view for innovation stories.

--- a/web/themes/ipu/src/sass/content/_node.innovation_tracker_story.scss
+++ b/web/themes/ipu/src/sass/content/_node.innovation_tracker_story.scss
@@ -3,6 +3,13 @@
     border-bottom-color: color('ipu-orange');
   }
 }
+
+.view-innovation-tracker-story {
+  .views-row {
+    @extend .innovation-tracker-issue__stories-row;
+  }
+}
+
 .node--type-innovation-tracker-story.node--view-mode-highlight {
   .bs-region--main {
     padding: 0;
