--- a/web/modules/custom/ipu_map/templates/ipu-map-country-stats.html.twig
+++ b/web/modules/custom/ipu_map/templates/ipu-map-country-stats.html.twig
@@ -62,14 +62,15 @@
             <a class="more-data-parline" href="{{ url }}"><span class="fas fa-chart-pie"></span>{{ 'More data from Parline'|t }}</a>
         </li>
     </ul>
-    {% if hub_link is not same as(null) %}
-    <div class="hub-link">
-        {{ hub_link }}
-    </div>
-    {% endif %}
   {% if data_provenance is not same as(null) %}
     <div class="data-provenance">
       {{ data_provenance }}
+    </div>
+  {% endif %}
+  {% if hub_link is not same as(null) %}
+    <div class="hub-link">
+      <h3 style="border-bottom: 2px solid #f0ad4e;">{{  'Innovation host'|t }}</h3>
+      {{ hub_link }}
     </div>
   {% endif %}
 </div>
