Style and minor content updates for Innovation tracker:
- Header for issue: Previous/next issue
- Add link to country to Hub update
- Add date to link to Issue from Story page (and move to left)
- Clean up title on parliament page

--- a/web/modules/custom/ipu_map/templates/ipu-map-country.html.twig
+++ b/web/modules/custom/ipu_map/templates/ipu-map-country.html.twig
@@ -24,7 +24,7 @@
         </div>
         <div class="col-md-8">
           {% if content.innovation_tracker_stories|length %}
-            <h2>{{ 'Innovation'|t }}</h2>
+            <h2 class="parliament-innovation-stories">{{ 'Innovation stories'|t }}</h2>
             {{ content.innovation_tracker_stories }}
           {% endif %}
           {% if content.news_and_stories|length %}
