--- a/web/themes/ipu/src/sass/content/_node.innovation_tracker_story.scss
+++ b/web/themes/ipu/src/sass/content/_node.innovation_tracker_story.scss
@@ -55,3 +55,13 @@
   }
 
 }
+.innovation-tracker-story__parent-link-wrapper {
+  background-color: $light;
+  padding: 4px 10px;
+  margin-bottom: 10px;
+}
+
+h2.parliament-innovation-stories {
+  margin: 0;
+  border-width: 0 !important;
+}
