--- a/web/themes/ipu/src/sass/content/_node.page.scss
+++ b/web/themes/ipu/src/sass/content/_node.page.scss
@@ -1,2 +1,34 @@
 // Page
 // -----------------------------------------------------------------------------
+.ipu-innovation-tracker {
+  &__navigation {
+    display: flex;
+    padding: 2px;
+    margin: 0 -5px 10px -5px;
+    & > * {
+      margin: 0 5px;
+      font-weight: 400;
+    }
+    .ipu-innovation-tracker__current {
+      font-weight: 400;
+    }
+    a.ipu-innovation-tracker__next::after,
+    a.ipu-innovation-tracker__previous::before {
+        font-family: "Font Awesome 5 Free", sans-serif;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+        display: inline-block;
+        font-style: normal;
+        font-variant: normal;
+        font-weight: 900;
+        line-height: 1;
+        margin: 0 4px;
+    }
+    a.ipu-innovation-tracker__next::after {
+      content: "\F061" !important;
+    }
+    a.ipu-innovation-tracker__previous::before {
+        content: "\F060" !important;
+    }
+  }
+}
