--- a/web/themes/custom/ipu_report/templates/node.html.twig
+++ b/web/themes/custom/ipu_report/templates/node.html.twig
@@ -99,17 +99,41 @@
 
   <div{{ content_attributes.addClass('node__content', 'clearfix') }}>
 
-    <div id="report-page-top" class="container-fluid">
+    {# Back pages - check if it's a Report, and if it has any sections (front page has none) #}
 
+    {% if node.bundle == 'report' and content.field_section['#items']|length > 0 %}
+
+    <div id="report-page-top" class="container-fluid">
+      <div class="container pt-5">
+        <div class="row">
+          <div class="col-6">
+            {% for key, item in content.field_section if key|first != '#' %}
+              <div class="report-section">
+                <div class="row item-{{ key + 1 }}">{{ item }}</div>
+              </div>
+            {% endfor %}
+          </div>
+          <div class="col-6">
+            <div class="report-page-introduction">{{ content.body.0 }}</div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    {% else %}
+
+    <div id="report-page-top" class="container-fluid">
       <div class="container">
-        <div class="row my-auto">
+       <div class="row my-auto">
           <div class="col-md-7 report-page-top-left align-self-center">
-            {%  if node.bundle == 'report'  %}
-            <h1 class="report-header">{{ node.label }}</h1>
+            {% if node.bundle == 'report'  %}
+              <h1 class="report-header">{{ node.label }}</h1>
             {% else %}
-            <h1>{{ node.label }}</h1>
-              <h2><span class="term-icon term-icon-{{ node.field_theme.0.target_id }}"></span>{{ node.field_subtitle.value }}</h2>
-            {% endif %}
+              <h1>{{ node.label }}</h1>
+                <h2><span class="term-icon term-icon-{{ node.field_theme.0.target_id }}"></span>{{ node.field_subtitle.value }}</h2>
+              {% endif %}
+
+            {{ content.field_key_figure }}
             <div class="report-page-introduction">{{ content.body.0 }}</div>
             {%  if node.bundle == 'report_section'  %}
             <div class="more-sections">
@@ -121,11 +145,12 @@
           </div>
             <div class="col-md-5">
               <div class="report-page-image"
-                   {% if content.field_image is defined and content.field_image is not empty %}
-                   style="background-image: url('{{ file_url(content.field_image['#items'].entity.uri.value | image_style('max_1300x1300')) }}'); background-size: cover;"
-                   {% endif %}
-              >
-                &nbsp;
+                {% if content.field_image is defined and content.field_image is not empty %}
+                  {% if content.field_image['#items'].entity.uri.value %}
+                  style="background-image: url('{{ file_url(content.field_image['#items'].entity.uri.value | image_style('max_1300x1300')) }}'); background-size: cover;"
+                  {% endif %}
+                {% endif %}
+              >&nbsp;
               </div>
 
             </div>
@@ -179,4 +204,9 @@
         </div>
       </div>
     </div>
+
+  </div>
+
+  {% endif %}
+
 </article>
