--- a/web/themes/custom/ipu_report/templates/paragraph--report-section.html.twig
+++ b/web/themes/custom/ipu_report/templates/paragraph--report-section.html.twig
@@ -61,7 +61,9 @@
         {% if contenttype == 'Banner image' %}
           <div class="container-fluid"
             {% if content.field_image is defined and content.field_image is not empty %}
-               style="background-image: url('{{ file_url(content.field_image['#items'].entity.uri.value | image_style('max_1300x1300')) }}'); background-size: cover;"
+              {% if content.field_image['#items'].entity.uri.value %}
+                 style="background-image: url('{{ file_url(content.field_image['#items'].entity.uri.value | image_style('max_1300x1300')) }}'); background-size: cover;"
+              {% endif %}>
             {% endif %}>
             <div class="row">
               <div id="report-section-{{ paragraph.id.value }}" class="col-12">
@@ -87,13 +89,16 @@
                       <h4>{{ content.field_section_title }}</h4>
                       <div class="wow animate__animated animate__fadeIn" data-wow-duration="2s">
                         {{ content.field_section_html }}
+                        {{ content.field_link }}
                         {% if content.field_image is defined and content.field_image is not empty %}
-                          <div class="image-with-caption">
-                            <img src="{{ file_url(content.field_image['#items'].entity.uri.value | image_style('max_1300x1300')) }}"/>
-                            <span class="image-caption">{{ content.field_image['#items'].alt }}</span>
-                          </div>
+                          {% if content.field_image['#items'].entity.uri.value %}
+                            <div class="image-with-caption">
+                              <img src="{{ file_url(content.field_image['#items'].entity.uri.value | image_style('max_1300x1300')) }}"/>
+                              <span class="image-caption">{{ content.field_image['#items'].alt }}</span>
+                            </div>
+                          {% endif %}
                         {% endif %}
-                      </imgv>
+                      </div>
                     </div>
               </div>
             </div>
@@ -126,7 +131,7 @@
                         <div class="wow animate__animated animate__fadeInRight">{{ content.field_section_html }}</div>
 
                         {% if contenttype == 'Next steps' %}
-                          <a class="button btn btn-primary wow animate__animated animate__fadeIn" data-wow-duration="1s" data-wow-delay="2s"
+                          <a class="button btn btn-primary wow animate__animated animate__fadeIn" data-wow-duration="0.5s" data-wow-delay="2s"
                              id="next-button" href="#">{{ 'Next section'|t }}</a>
                         {% endif %}
                       </div>
