Make publication link translatable, add language switcher and subscribe link to footer,

--- a/web/themes/custom/ipu_report/scss/report.scss
+++ b/web/themes/custom/ipu_report/scss/report.scss
@@ -615,6 +615,9 @@ figcaption {
     padding-bottom: 1rem;
     background-color: $ipu-very-light-grey !important;
   }
+  .report-download {
+    margin: 0 0 10px 0;
+  }
 }
 
 #block-impactreportfooter {
