--- a/web/modules/custom/ipu_tweaks/templates/ipu-tweaks-report-footer.html.twig
+++ b/web/modules/custom/ipu_tweaks/templates/ipu-tweaks-report-footer.html.twig
@@ -9,7 +9,7 @@
       {% endif %}
       <a class="logo-link" href="/{{ url }}"><img class="logo" src="/themes/custom/ipu_report/images/ipu_logo-{{ language }}.png" /></a>
       {# page.navbar_branding #}
-
+      {{ drupal_block('language_block:language_interface') }}
     </div>
     <div class="footer-col-2 col-md-3 col-sm-6">
       {{ col2 }}
@@ -18,8 +18,8 @@
       {{ col3 }}
     </div>
     <div class="footer-col-4 col-md-3 col-sm-6">
-
-      <div class=""><a href="{{col4.link.uri}}" class="btn btn-download btn-secondary">{{col4.link.title}}</a></div>
+      <div class="report-download"><a href="{{col4.link.uri}}" class="btn btn-download btn-secondary">{{col4.link.title}}</a></div>
+      <p><a href="http://eepurl.com/UnyVX">{{ 'Subscribe to our newsletter'|t }}</a></p>
     </div>
 
 
