--- a/web/themes/custom/ipu_report/templates/paragraph--report-section.html.twig
+++ b/web/themes/custom/ipu_report/templates/paragraph--report-section.html.twig
@@ -90,7 +90,7 @@
 
             <div class="container">
               <div class="row">
-                    <div id="report-section-{{ paragraph.id.value }}" class="col-9 align-self-center">
+                    <div id="report-section-{{ paragraph.id.value }}" class="col-md-9 col-12 align-self-center">
                       <h4>{{ content.field_section_title }}</h4>
                       <div class="wow animate__animated animate__fadeIn" data-wow-duration="2s">
                         {{ content.field_section_html }}
@@ -112,10 +112,10 @@
 
             <div class="container-fluid">
               <div class="row">
-                <div id="report-section-{{ paragraph.id.value }}" class="bg-left col-4 pr-0">
+                <div id="report-section-{{ paragraph.id.value }}" class="bg-left col-md-4 pr-0">
                   <div class="container">
                     <div class="row">
-                      <div class="col-8 offset-4 pl-0 pr-0">
+                      <div class="col-md-8 offset-md-4 pl-0 pr-0">
                         <h3>
                           {% if contenttypeid == 'next_steps' %}
                             <i class="fas fa-caret-right"></i><i class="fas fa-caret-right"></i>
@@ -126,10 +126,10 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-8 bg-right">
+                <div class="col-md-8 bg-right">
                   <div class="container">
                     <div class="row">
-                      <div class="col-8">
+                      <div class="col-md-8">
                         <h3>&nbsp;</h3>
                         <div class="line"></div>
                         <h4>{{ content.field_section_title }}</h4>
