--- a/web/themes/custom/ipu_report/scss/report.scss
+++ b/web/themes/custom/ipu_report/scss/report.scss
@@ -387,12 +387,21 @@ h1 {
 }
 
 @include media-breakpoint-down(md) {
-  #report-page-top  h2 {
-    font-size: 2rem;
+  #report-page-top {
+    h2 {
+      font-size: 2rem;
+    }
   }
+  .node--type-report {
+    .row {
+      flex-direction: column-reverse;
+    }
+  }
+
   .report-page-image {
-    min-height: 200px;
-    margin-right: 0;
+    min-height: 240px;
+    margin-right: -15px !important;
+    margin-left: -15px !important;
   }
   #navbar-sections {
    display: none;
@@ -452,6 +461,10 @@ h1 {
 @include media-breakpoint-down(md) {
   .line {
     display: none;
+  }
+  .bg-left,
+  .bg-right {
+    padding-top: 10px;
   }
   .bg-right h3 {
     display: none;
@@ -667,6 +680,7 @@ blockquote {
   margin-bottom: 20px;
   img {
     max-width: 100%;
+    height: auto;
   }
   .image-caption {
     @extend .image-caption-basic;
