--- a/web/themes/custom/ipu_report/templates/paragraph--report-section.html.twig
+++ b/web/themes/custom/ipu_report/templates/paragraph--report-section.html.twig
@@ -49,7 +49,8 @@
 
 {%
   set classes = [
-    not contenttypeid == 'image' ? 'col-12',
+    not (contenttypeid == 'image') ? 'col-12',
+    not (contenttypeid == 'report')  ? 'pr-0 pl-0',
     'paragraph',
     'container-fluid',
     'paragraph--type--' ~ paragraph.bundle|clean_class,
@@ -82,6 +83,7 @@
                   </div>
                 </div>
               </div>
+            </div>
           </div>
         {% endif %}
 
