Fix col order on report pages so inamge displays first

--- a/web/themes/custom/ipu_report/scss/report.scss
+++ b/web/themes/custom/ipu_report/scss/report.scss
@@ -393,8 +393,10 @@ h1 {
     }
   }
   .node--type-report {
-    .row {
-      flex-direction: column-reverse;
+    #report-page-top {
+      .row {
+        flex-direction: column-reverse;
+      }
     }
   }
 
