Better sizing and margins on right column in special report sections

--- a/web/themes/custom/ipu_report/templates/paragraph--report-section.html.twig
+++ b/web/themes/custom/ipu_report/templates/paragraph--report-section.html.twig
@@ -129,9 +129,9 @@
                   </div>
                 </div>
                 <div class="col-md-8 bg-right">
-                  <div class="container">
+                  <div class="container ml-0">
                     <div class="row">
-                      <div class="col-md-8">
+                      <div class="col-md-8 col-lg-6">
                         <h3>&nbsp;</h3>
                         <div class="line"></div>
                         <h4>{{ content.field_section_title }}</h4>
@@ -142,6 +142,7 @@
                              id="next-button" href="#">{{ 'Next section'|t }}</a>
                         {% endif %}
                       </div>
+                      <div class="col-md-4 col-lg-6"></div>
                     </div>
                   </div>
                 </div>
