--- a/web/themes/custom/ipu_report/templates/node.html.twig
+++ b/web/themes/custom/ipu_report/templates/node.html.twig
@@ -143,7 +143,7 @@
             {% endif %}
 
           </div>
-            <div class="col-md-5">
+            <div class="col-md-5 position-relative" >
               <div class="report-page-image"
                 {% if content.field_image is defined and content.field_image is not empty %}
                   {% if content.field_image['#items'].entity.uri.value %}
@@ -152,7 +152,7 @@
                 {% endif %}
               >&nbsp;
               </div>
-
+              <div class="image-caption-overlay">{{ content.field_image['#items'][0].alt }}</div>
             </div>
         </div>
 
