Change background colour of caption overlay

--- a/web/themes/custom/ipu_report/scss/report.scss
+++ b/web/themes/custom/ipu_report/scss/report.scss
@@ -684,7 +684,7 @@ blockquote {
   display: block;
   margin-right: 15px;
   color: #fff;
-  background-color: $ipu-blue-light;
+  background-color: $ipu-dark-grey-overlay;
   padding: 2px 4px;
 }
 
