--- a/web/themes/custom/ipu_report/scss/variables.scss
+++ b/web/themes/custom/ipu_report/scss/variables.scss
@@ -17,6 +17,8 @@ $ipu-teal: #00a8b4;
 $ipu-orange: #e98300;
 $ipu-teal-light: rgba($ipu-teal, 0.3);
 $ipu-dark-grey: #333333;
+$ipu-dark-grey-overlay: rgba($ipu-dark-grey, 0.6);
+
 $ipu-grey: #747678;
 $ipu-light-grey: #cccccc;
 $ipu-very-light-grey: #eeeeee;
