--- a/web/themes/custom/ipu_report/scss/report.scss
+++ b/web/themes/custom/ipu_report/scss/report.scss
@@ -680,7 +680,7 @@ blockquote {
 .image-caption-overlay {
   position: absolute;
   left: 25px; // Include the padding on the column
-  top: 10px;
+  bottom: 10px;
   display: block;
   margin-right: 15px;
   color: #fff;
